// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/classification/EditClassificationButton should render correctly when isEditing is false 1`] = `
<PlainButton
  className="bdl-EditClassificationButton foo"
  data-resin-target="addclassification"
  foo="bar"
  onClick={[Function]}
  type="button"
>
  <FormattedMessage
    defaultMessage="Add"
    id="boxui.classification.add"
  />
</PlainButton>
`;

exports[`features/classification/EditClassificationButton should render correctly when isEditing is true 1`] = `
<PlainButton
  className="bdl-EditClassificationButton foo"
  data-resin-target="editclassification"
  foo="bar"
  onClick={[Function]}
  type="button"
>
  <FormattedMessage
    defaultMessage="Edit"
    id="boxui.classification.edit"
  />
</PlainButton>
`;
